[gd_scene load_steps=2 format=3 uid="uid://dl08gjqom3b52"]

[ext_resource type="Script" path="res://Game/pause_menu.gd" id="1_riuo8"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_riuo8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 540.0
offset_right = 740.0
offset_bottom = 720.0
alignment = 1

[node name="ThemeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Theme:"

[node name="ThemeSelect" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="FullScreenButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Toggle Fullscreen"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[connection signal="item_selected" from="VBoxContainer/ThemeSelect" to="." method="_on_theme_select_item_selected"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/FullScreenButton" to="." method="_on_full_screen_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
